Second draft of master's thesis

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,6 +12,18 @@ url = "http://www.sciencedirect.com/science/article/pii/S0019103502968946",
 author = "Jon M. Jenkins and Marc A. Kolodner and Bryan J. Butler and Shady H. Suleiman and Paul G. Steffes"
 }
 
+
+@article{Esposito-2012,
+title = {Planetary science: {R}ising sulphur on {V}enus},
+journal = "Nature Geoscience",
+volume = "6",
+number = "1",
+pages = "20 - 21",
+year = "2012",
+note = "",
+author = "Esposito, Larry W."
+}
+
 @article{Pickett-1998,
 title = "Submillimeter, Millimeter, and Microwave Spectral Line Catalog",
 journal = "Journal of Quantitative Spectroscopy and Radiative Transfer ",
@@ -139,6 +151,7 @@ school = {FIAN University},
 year = {1988},
 }
 
+
 @article {Suleiman-1996,
 author = {Suleiman, Shady H. and Kolodner, Marc A. and Steffes, Paul G.},
 title = {Laboratory measurement of the temperature dependence of gaseous sulfur dioxide (SO2) microwave absorption with application to the Venus atmosphere},
@@ -215,6 +228,13 @@ title = {The {C}entimeter- and {M}illimeter-{W}avelength {A}mmonia {A}bsorption 
 year = "2011",
 school = {Georgia Institute of Technology},
 month = "December"
+}
+
+@phdthesis {Karpowicz-thesis,
+author = {Bryan Mills Karpowicz},
+title = {In search of water vapor on Jupiter: laboratory measurements of the microwave properties of water vapor and simulations of Jupiter's microwave emission in support of the Juno mission},
+school = {Karpowicz},
+year = {2010},
 }
 
 @phdthesis{Suleiman-thesis,
