--- a/model/model.tex
+++ b/model/model.tex
@@ -1,12 +1,12 @@
 \chapter{Model Fitting and Modifications}
-In total, 36 data sets were taken at two temperatures (12 at \textasciitilde 308 K and 24 at \textasciitilde 343 K) at 2-4 mm-wavelength. This, along with data taken at the centimeter-wavelength by Steffes et al. 2014 \cite{Steffes-2014}(10 data sets at \textasciitilde 435 K, 10 data sets at \textasciitilde 490 K, and 5 data sets at \textasciitilde 550 K), were used in finding the best-fit model.
+In total, 36 data sets were taken at two temperatures (12 at \textasciitilde 308 K and 24 at \textasciitilde 343 K) at 2-4 mm-wavelength. This, along with data taken at the centimeter-wavelength by Steffes et al. \cite{Steffes-2014}(10 data sets at \textasciitilde 435 K, 10 data sets at \textasciitilde 490 K, and 5 data sets at \textasciitilde 550 K), were used in finding the best-fit model.
 
-Before creating a new formalism for the absorption of SO$_2$ in a CO$_2$ atmosphere, analysis of previous models was conducted. The Van Vleck and Weisskopf Model (VVW) used by Fahd and Steffes \cite{Fahd-thesis} with the new JPL rotational line catalog (Pickett, et al. 1998 \cite{Pickett-1998}) was found to fit 85.88\% of all 500 within $2\sigma$ uncertainty. Consideration of the model analysis process and the final model are presented.
+Before creating a new formalism for the absorption of SO$_2$ in a CO$_2$ atmosphere, analysis of previous models was conducted. The Van Vleck and Weisskopf Model (VVW) used by Fahd and Steffes \cite{Fahd-1991} with the new JPL rotational line catalog (Pickett, et al. \cite{Pickett-1998}) was found to fit 85.88\% of all 500 within $2\sigma$ uncertainty. Consideration of the model analysis process and the final model are presented.
 \input{./model/uncertainties}
 
 \section{Model Analysis Process}
 
-The models used in this comparison are the Van Vleck-Weisshopf model (using coefficients from Fahd and Steffes \cite{Fahd-1991}) and the Ben-Reuven model as calculated by Suleiman et al. \cite{Suleiman-1996}. The comparison of these models are done using a L$_2$ norm analysis. 
+The models considered in this comparison are the Van Vleck-Weisshopf model (using coefficients from Fahd and Steffes \cite{Fahd-1991}) and the Ben-Reuven model as calculated by Suleiman et al. \cite{Suleiman-1996}. The comparison of these models are done using a L$_2$ norm analysis. 
 
 The following compliance function was used to calculate the number of data points that each model encompassed,
 \begin{equation}
@@ -45,7 +45,7 @@ where $Per_{model}$ is the percentage of data points that the model fits and $N$
 \clearpage
 
 \section{Suggested Model}
-Results indicate that the models for the centimeter- and millimeter-wavelength opacity from SO$_2$ in a CO$_2$ atmosphere by Suleiman et al. (1996) and Fahd and Steffes (1992) are both valid over the entire centimeter-and millimeter-wavelength range under simulated conditions for the upper atmosphere of Venus. Based on the percentage of data consistent with the models, the suggested model is the Fahd and Steffes \cite{Fahd-thesis} model. This model employs the Van Vleck-Weisskopf lineshape, and was developed from measurements of SO$_2$/CO$_2$ mixtures conducted at room temperature. As per their paper, we employ only the rotational line catalog to compute opacity. (JPL spectral line catalog, Pickett et al., 1998) \cite{Pickett-1998}. While both models perform well, the Fahd and Steffes (1992) model appears to provide a slightly better fit to the overall data set. 
+Results indicate that the models for the centimeter- and millimeter-wavelength opacity from SO$_2$ in a CO$_2$ atmosphere by Suleiman et al. \cite{Suleiman-1996} and Fahd and Steffes \cite{Fahd-1991} are both valid over the entire centimeter-and millimeter-wavelength range under simulated conditions for the upper atmosphere of Venus. Based on the percentage of data consistent with the models, the suggested model is that from the Fahd and Steffes \cite{Fahd-thesis} model but using the updated line catalog from Picket et al. \cite{Pickett-1998}. This model employs the Van Vleck-Weisskopf lineshape, and was developed from measurements of SO$_2$/CO$_2$ mixtures conducted at room temperature. As per their paper, we employ only the rotational line catalog to compute opacity. (JPL spectral line catalog, Pickett et al., \cite{Pickett-1998}. While both models perform well, the Fahd and Steffes \cite{Fahd-1991}  model appears to provide a slightly better fit to the overall data set. 
 
-It should also be noted that because both models were derived from measurements conducted at pressures of 6 Bars or less, no allowance for the compressibility of CO$_2$ is included in these models. When performing the best-fit analysis, a correction factor for compressibility was computed and entered into the models (simply dividing the measured partial pressure of CO$_2$ by the compressibility, Z). 
+It should also be noted that because both models were derived from measurements conducted at pressures of 6 Bars or less, no allowance for the compressibility of CO$_2$ is included in these models. When performing the best-fit analysis of high-pressure data \cite{Steffes-2014}, a correction factor for compressibility was computed and entered into the models (simply dividing the measured partial pressure of CO$_2$ by the compressibility, Z). 
 
