--- a/model/results.tex
+++ b/model/results.tex
@@ -1,17 +1,17 @@
 \clearpage
 \section{Experimental Results}
-High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plots show the results of these absorptivity measurements with the accompanying two-sigma uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} using the new JPL line catalog. 
+High accuracy laboratory measurements of the temperature and pressure dependence of the millimeter-wavelength absorption of gaseous SO$_2$ in a CO$_2$ atmospheres have been conducted at 308 and 345 K at pressures from 30 mbar to 3 bars for wavelengths between 2-4 milimeters. The following plots show the results of these absorptivity measurements with the accompanying two-sigma uncertainties. For comparison purposes these plots also show two known formalisms of SO$_2$'s absorptivity. One developed by Suleiman et al. 1997 \cite{Suleiman-thesis} and the second by Fahd and Steffes \cite{Fahd-thesis} but using the new JPL line catalog \cite{Pickett-1998}. 
 
 \subsection{Accuracy of Constituents}
 
-It is necessary to ensure that the gasses used in each experiment is correctly characterized. Initially the bottle of SO$_2$ was assumed to consist of 100\% SO$_2$. The bottle was sent to Airgas$_\circledR$ for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Since N$_2$ has no absorptivity at centimeter and millimeter-wavelengths it can be safely ignored. This explains why the SO$_2$  and CO$_2$ mole fractions do not add up to 100\% in the following plots. 
+It is necessary to ensure that the gases used in each experiment are correctly characterized. Initially the bottle of SO$_2$ was assumed to consist of 100\% SO$_2$. The bottle was sent to Airgas$_\circledR$ for analysis. It was concluded that the SO$_2$ bottle used was actually comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Since N$_2$ has no absorptivity at centimeter and millimeter-wavelengths it can be safely ignored.Thus, the SO$_2$  and CO$_2$ mole fractions do not add up to 100\% in the following plots. 
 
 
 %Originally when the data was taken, the results fit the lineshapes of these two model's but the absorption calculated was much lower then predicted. After careful considerations of what could have caused this the SO$_2$ bottle was shipped back to Airgas\texttrademark for analysis. It was concluded that the SO$_2$ bottle used was comprised of 84.7\% SO$_2$ and 15.3\% N$_2$. Luckily N$_2$ has little to no absorptivity in the millimeter-wavelength domain so it is safely ignored.
 
 %When this factor was then taken into account it became possible to compute both model's with the correct SO$_2$ mixing ratio. When this was done the data fit the model's lineshape and absorption. This is also the reason that the SO$_2$ mixing ratio and CO$_2$ mixing ratio do not add up to 100\%.
 
-The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014}. Since the CO$_2$ absorption measured in the paper matched the formalism and the refractive index of the gas matched that of CO$_2$ it is assumed that the tank is pure CO$_2$.
+The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014}. Since the CO$_2$ absorption measured in that paper matched the previously published formalism for opacity and refractive index of CO$_2$ \cite{Ho-1966} it can be assumed that the tank contained pure CO$_2$.
 
 %\subsection{Data}
 
@@ -45,13 +45,13 @@ The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{307.25K-0.9429bar-98so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 10.4\% , CO$_2$ = 87.7\% at a pressure of 0.943 bar and a temperature of 307.2 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 10.4\% , CO$_2$ = 87.7\% at a pressure of 0.943 bar and a temperature of 307.2 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{307.25K-1.9869bar-98so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 4.9\% and CO$_2$ = 94.2\% at a pressure of 1.987 bar and a temperature of 307.2 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 4.9\% and CO$_2$ = 94.2\% at a pressure of 1.987 bar and a temperature of 307.2 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
@@ -93,36 +93,36 @@ The CO$_2$ tank used was the same tank used in Steffes et al. \cite{Steffes-2014
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{343.65K-0.101bar-86so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 84.7\% and CO$_2$ = 0\% at a pressure of 0.101 bar and a temperature of 343.6 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 84.7\% and CO$_2$ = 0\% at a pressure of 0.101 bar and a temperature of 343.6 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{343.25K-0.936bar-86so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 9.1\% and CO$_2$ = 89.2\% at a pressure of 0.936 bar and a temperature of 343.2 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 9.1\% and CO$_2$ = 89.2\% at a pressure of 0.936 bar and a temperature of 343.2 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{342.95K-2.016bar-86so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 4.2\% and CO$_2$ = 95\% at a pressure of 2.016 bar and a temperature of 342.9 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 4.2\% and CO$_2$ = 95\% at a pressure of 2.016 bar and a temperature of 342.9 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{343.15K-0.06bar-51so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 84.7\% and CO$_2$ = 0\% at a pressure of 0.060 bar and a temperature of 343.1 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 84.7\% and CO$_2$ = 0\% at a pressure of 0.060 bar and a temperature of 343.1 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{343.65K-0.927bar-51so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 5.5\% and CO$_2$ = 93.5\% at a pressure of 0.927 bar and a temperature of 343.6 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 5.5\% and CO$_2$ = 93.5\% at a pressure of 0.927 bar and a temperature of 343.6 K compared to various models}
  \end{figure}
 
 \begin{figure}[p]
  \centering 
 \includegraphics[width=0.7\textwidth]{./model/results/{{343.95K-2.004bar-51so2-modelComparison}}} 
- \caption{Opacity data  using the 3-4 mm-wavelength system for a mixture of SO$_2$ = 2.5\% and CO$_2$ = 97\% at a pressure of 2.004 bar and a temperature of 343.9 K compared to various models}
+ \caption{Opacity data  using the 2.7-4 mm-wavelength system for a mixture of SO$_2$ = 2.5\% and CO$_2$ = 97\% at a pressure of 2.004 bar and a temperature of 343.9 K compared to various models}
  \end{figure}
 
