--- a/rtm/results.tex
+++ b/rtm/results.tex
@@ -1,7 +1,7 @@
 \section{Radiative Transfer Results}
 To validate the developed RTM, results from disk-averaged computations were compared to various disk-averaged brightness measurements taken of Venus. Table \ref{tab:rtm-results} shows results for measurements of the microwave and millimeter-wave disk-averaged brightness temperatures of Venus. For comparison purposes the table also shows the computed disk-averaged brightness temperatures ($T_D$) for Venus using the developed RTM. 
 
-For the lower frequencies our computed $T_D$ is much higher then the measured values. This is due to the understatement of the H$_2$SO$_4$ abundance profile. Since H$_2$SO$_4$'s profile varies widely by latitude and longitude using a different profile will make this difference much smaller. 
+For the lower frequencies our computed $T_D$ is much higher then the measured values. %This is due to the understatement of the H$_2$SO$_4$ abundance profile. Since H$_2$SO$_4$'s profile varies widely by latitude and longitude using a different profile will make this difference much smaller. 
 
 Figure \ref{fig:weight} shows the weighting function of various frequencies. Changing the SO$_2$ and H$_2$SO$_4$ abundance profiles will incure a change in the weighting functions as well as the disk-averaged temperature.
 \begin{table}[h]
