--- a/rtm/rtm.tex
+++ b/rtm/rtm.tex
@@ -2,28 +2,28 @@
 
 %\section{Introduction}
 
-One key aspect of this research has been to model the microwave and millimeter-wave emission spectra from the surface of Venus and its atmosphere. This is accomplished using a radiative transfer model. The radiative transfer model (RTM) computes the brightness temperature of Venus given a temperature-pressure profile, vertical abundance profiles, and the opacity formalism for the for the atmospheric constituents. The developed RTM is written in a modular way such that any input can be easily changed without changing other aspects. The RTM has the ability to do pencil-beam, disk average, and antenna patterns. This new model provides a more accurate representation of the microwave and millimeter-wave emission spectrum of Venus. 
+One key aspect of this research has been to model the microwave and millimeter-wave emission spectra from the surface of Venus and its atmosphere. This is accomplished using a radiative transfer model. The radiative transfer model (RTM) computes the brightness temperature of Venus given a temperature-pressure profile, vertical constituent abundance profiles, and the opacity formalism for the for the atmospheric constituents. The developed RTM is written in a modular way such that any input can be easily changed without changing other aspects. The RTM has the ability to simulate pencil-beam emissions, disk averaged emissions, or the emission over a selected antenna pattern. %This new model provides a more accurate representation of the microwave and millimeter-wave emission spectrum of Venus. 
 
 \section{Theoretical Background}
 
-The emission from the surface of Venus and its atmosphere can be computed using a Radiative Transfer Model (RTM). Radiative transfer is a method to solve for the emission of electromagnetic energy from a medium. In a most basic RTM, it is assumed that the solution for intensity (or brightness temperature) is cimputed from emissions along an infinitely thin beam (pencil beam). A second assumption is that the atmosphere is in local thermodynamic equilibrium (LTE). LTE implies that for a given moment or snapshot in time the atmosphere is static; that is, the model does not consider atmospheric dynamics when solving the radiative transfer equation. The differential form of the radiative transfer equation is
+The emission from the surface of Venus and its atmosphere can be computed using a Radiative Transfer Model (RTM). Radiative transfer is a method to solve for the emission of electromagnetic energy from a medium. In a most basic RTM, it is assumed that the solution for intensity (or brightness temperature) is computed from emissions along an infinitely thin beam (pencil beam). A second assumption is that the atmosphere is in local thermodynamic equilibrium (LTE). LTE implies that for a given moment or snapshot in time the atmosphere is static; that is, the model does not consider atmospheric dynamics when solving the radiative transfer equation. The differential form of the radiative transfer equation is
 \begin{equation}\label{eq:rtm-diff}
 dI_{\nu}= -\alpha I_{\nu }ds + \alpha J ds
 \end{equation}
- where $dI_\nu$ is the change in intensity at a given frequency $\nu$, over a path length $ds$, $\alpha$ is the absorption coefficient or attenuation over a path length $ds$, and $J$ is the source function \cite{Liou-2002}. 
+where $dI_\nu$ is the change in intensity at a given frequency $\nu$, over a path length $ds$, $\alpha$ is the absorption coefficient or attenuation over a path length $ds$, and $J$ is the source function \cite{Liou-2002}. 
 
 In the microwave and millimeter wave regime, effects from scattering approach the Rayleigh limit, and may be neglected without introducing significant error. Therefore the source function $J$ becomes the Plank function.
 \begin{equation}\label{eq:rtm-planck}
 J_\nu = B_\nu(T) = \frac{h\nu^3}{c^2} \frac{1}{\exp(\frac{h\nu}{kT})-1} \approx \frac{2kT\nu^2}{c^2}
 \end{equation}
-where $T$ is the temperature in Kelvin, $h$ is Planck's constant, $k$ is Boltzman's constant, and $c$ is the speed of light. The approximation in equation \ref{eq:rtm-planck} is for cases where $h\nu \ll kT$ (characteristic of centimeter and millimeter-wavelengths) and is known as the Rayleigh-Jeans approximation. The brightness temperature of the black body can then be directly related to the radiation intensity
-\begin{equation}\label{eq:temp-intensity}
-T_b(\nu) = \frac{\lambda}{2k}I_\nu
-\end{equation}
+where $T$ is the temperature in Kelvin, $h$ is Planck's constant, $k$ is Boltzman's constant, and $c$ is the speed of light (Karpowicz \cite{Karpowicz-thesis}). The approximation in equation \ref{eq:rtm-planck} is for cases where $h\nu \ll kT$ (characteristic of centimeter and millimeter-wavelengths) and is known as the Rayleigh-Jeans approximation. %The brightness temperature of the black body can then be directly related to the radiation intensity
+%\begin{equation}\label{eq:temp-intensity}
+%T_b(\nu) = \frac{\lambda}{2k}I_\nu
+%\end{equation}
 
 If equation \ref{eq:rtm-diff} is integrated over the path $s$ it becomes
 \begin{equation}\label{eq:rtm-integrated}
-I_\nu(s) = I_{\nu}(s_0)e^{-\tau_\nu(s_0)}+\int_0^{s_0} \alpha_\nu(s)B_\nu(T) e^{-\tau_\nu(s)}ds 
+I_\nu(s) = I_{\nu,o}(s_0)e^{-\tau_\nu(s_0)}+\int_0^{s_0} \alpha_\nu(s)B_\nu(T) e^{-\tau_\nu(s)}ds 
 \end{equation}
 where the first term is the intensity at the boundary of the integration and represents contributions to emissions from sources other than those over the path of integration, such as background or surface emission, and $\tau$ is the optical depth defined by
 \begin{equation}\label{eq:rtm-tau}
@@ -33,32 +33,45 @@ where the first term is the intensity at the boundary of the integration and rep
 For the terrestrial inner planets, the surface term is 
 \begin{equation}\label{eq:rtm-surface-term}
 \begin{split}
-I_{\nu}(s_0) =& I_{surf} + I_{cmb}+ I_{down}(s_0)
+I_{\nu,o}(s_0) =& I_{surf} + I_{cmb}+ I_{down}
 \end{split}
 \end{equation}
 where the first term is the surface emission, the second is the cosmic microwave background, and the final term is the downwelling of each atmospheric layer attenuated by the atmospheric absorption encountered on its way up out of the atmosphere. 
 
-If we model the atmosphere as having $N$ layers, we can combine equations \ref{eq:rtm-integrated} and \ref{eq:rtm-surface-term} and rewrite them as a function of $B_\nu'$, the brightness emanating from the planet at a particular microwave frequency and an impact parameter $a$ (which describes how the ray is emitted from the planet and is computed using a Ray Tracing algorithm).
-\begin{equation}\label{eq:rtm-layers}
+While intensity is a quantity often used in solar and ultra-violet remote sensing, it is far more common to use brightness temperature for longer wavelengths such as infrared and microwave. This quantity is found by taking the approximation in Equation \ref{eq:rtm-planck} and solving for $T$. Brightness temperature is defined as,
+\begin{equation}\label{eq:rtm-tempbright}
+T_b = \frac{Tc^2}{2\nu k}
+\end{equation}
+Substituting Equations \ref{eq:rtm-planck}, \ref{eq:rtm-tempbright}, and \ref{eq:rtm-surface-term} into \ref{eq:rtm-integrated}, and solving for brightness temperature, the equation for radiative transfer becomes, 
+\begin{equation}\label{eq:rtm-tempinte}
 \begin{split}
-B'_\nu(a) &= \epsilon(\theta)B_{surf} e^{-\tau_{0\rightarrow \infty}} + [1-\epsilon(\theta)]B_{cmb}e^{-2\tau_{0\rightarrow\infty}}\\
-&+ \sum_{i=1}^N B_i(1-e^{-\tau_i}) e^{-\tau_{i+1\rightarrow \infty}} \\
-&+ \sum_{i=1}^N B_i(1-e^{-\tau_i})[1-\epsilon(\theta)] e^{-\tau_{0\rightarrow i-1}} e^{-\tau_{0\rightarrow \infty}}
+T_b(\nu) = &\left(\epsilon(\theta)T_{surf} + [1-\epsilon(\theta)]e^{-\tau_\nu(s)}T_{cmb}+ T_{down}(\nu)\right)e^{-\tau_\nu(s_0)}\\
+&+\int_0^{s_0} \alpha_\nu(s)T(s) e^{-\tau_\nu(s)}ds
 \end{split}
 \end{equation}
-where $B_{surf}$ is the surface brightness, $B_i$ is the brightness of the atmospheric layer i, $B_{cmb}$ is the cosmic microwave background brightness (2.7 K in brightness temperature units), $\epsilon$ is the surface emissivity at emission angle $\theta$ (function of $a$). The terms containing $\tau$ are opacities integrated along different sections of the ray path for impact parameter $a$. The brightnesses are related to the physical temperature of the surface and atmospheric layers by a factor of unity (i.e. $B_{surf}= T_{surf}$) due to the Rayleigh-Jeans approximation. 
+Where $\epsilon(\theta)$ is the surface emissivity, $\theta$ is the transmission angle upward, $T_{surf}$ is the physical surface temperature, $T_{cmb}$ is the cosmic background radiation temperature (2.7K) attenuated while going through the atmosphere (s), $T$ is the physical temperature along the integration path, finally $T_{down}(\nu)$ is the downwelling radiation from each atmospheric layer attenuated by every layer below it which is expressed as
+\begin{equation}
+T_{down}(\nu) = \int_{s_0}^{0} \alpha_\nu(s)T(s) e^{-\tau_\nu(s)}
+\end{equation}  
 
-The first term in equation \ref{eq:rtm-layers} is the brightness at the surface of the planet multiplied by the planet's emissivity then attenuated by its atmosphere. The second term is the cosmic background attenuated by two passes through the atmosphere and a reflection from the surface. The third term represents the upwelling radiation from the each layer in the atmosphere attenuated from each layer's atmospheric absorption encountered on its way up from the atmosphere. The final term is the downwelling radiation from each atmospheric layer attenuated by every layer below it as well as the whole atmosphere, finally it is modified by the reflection of the surface of the planet. 
-
-Optical depths are integrated over the distance that the ray travels in each layer of the atmosphere. The optical depth of each layer is given by
-\begin{equation}\label{eq:rtm-layerdepth}
-\tau_i = \int_{s(z=z_i)}^{s(z=z_{i+1})} \alpha(s) ds
+The discrete form of \ref{eq:rtm-tempinte} can be expressed as,
+\begin{equation}\label{eq:rtm-layers}
+\begin{split}
+T'_\nu(a) &= \epsilon(\theta)T_{surf} e^{-\tau_{0\rightarrow \infty}} \\
+&+ [1-\epsilon(\theta)]T_{cmb}e^{-2\tau_{0\rightarrow\infty}}\\
+&+ \sum_{i=1}^N T_i(1-e^{-\tau_i})[1-\epsilon(\theta)] e^{-\tau_{0\rightarrow i-1}} e^{-\tau_{0\rightarrow \infty}}\\
+&+ \sum_{i=1}^N T_i(1-e^{-\tau_i}) e^{-\tau_{i+1\rightarrow \infty}} 
+\end{split}
 \end{equation}
-where $z_i$ is the height of the $i^{th}$ layer. To calculate the optical depth through a group of layers the following formula is used
+where $a$ is the impact parameter which describes how the ray is emitted from the planet and is computed using a Ray Tracing algorithm and $\tau_{x\rightarrow y}$ is the optical depth from layer x to layer y, 
 \begin{equation}\label{eq:rtm-layersum}
 \tau_{j\rightarrow k} = \sum_{i=j}^k \tau_i
 \end{equation}
-where $j$ is the first layer and $k$ is the final layer of interest. 
+$\tau_i$ is the optical depth of layer $i$ and is given by
+\begin{equation}\label{eq:rtm-layerdepth}
+\tau_i = \int_{s(z=z_i)}^{s(z=z_{i+1})} \alpha(s) ds
+\end{equation}
+where $z_i$ is the height of the $i^{th}$ layer \cite{Jenkins-2002}. 
 
 To compute the surface emissivity $\epsilon$ the following formula can be used
 \begin{equation}\label{eq:rtm-esurf}
@@ -71,13 +84,13 @@ R_{surf}(\theta) =& \frac{1}{2} \left[ \frac{\cos\theta - \sqrt{\epsilon_d/\eta_
 &+\frac{1}{2} \left[ \frac{\epsilon_d/\eta_1^2 \cos\theta - \sqrt{\epsilon_d/\eta_1^2-\sin^2\theta}}{\epsilon_d/\eta_1^2 \cos\theta + \sqrt{\epsilon_d/\eta_1^2-\sin^2\theta}} \right]^2
 \end{split}
 \end{equation}
-where $\theta$ is the transmission angle upward through the first atmospheric layer and $\eta_1$ is the index of refraction for the first atmospheric layer. The dielectric constant of the surface $\epsilon_d$ is assumed to have a uniform value of $4.0$ \cite{Pettengill-1992}.
+where $\theta$ is the transmission angle upward through the first atmospheric layer and $\eta_1$ is the index of refraction for the first atmospheric layer \cite{Jenkins-2002}. The dielectric constant of the surface $\epsilon_d$ is assumed to have a uniform value of $4.0$ \cite{Pettengill-1992}.
 
-If equation \ref{eq:rtm-layers} is integrated over all angles of emission and divided by the number of samples taken, the Disk-Averaged brightness can be obtained. This is useful in comparing the model to full-disk observations made of Venus as well as producing residual plots of the planet. The residual plots can be used to find any discrepancies in the Venus atmosphere and allow for identification of atmospheric phenomenon. 
+If Equation \ref{eq:rtm-layers} is integrated over all angles of emission and divided by the number of samples taken, the Disk-Averaged brightness can be obtained. This is useful in comparing the model to full-disk observations made of Venus as well as producing residual plots of the planet. The residual plots can be used to find any discrepancies in the Venus atmosphere and allow for identification of atmospheric phenomenon. 
 
 It is also useful to know how each layer of the atmosphere affects the brightness temperature; this can be found through calculation of the weighting function,
 \begin{equation}
-W_i = (1-e^{\tau,i}) e^{-\tau_{i+1,N}}
+W_i = (1-e^{\tau_i}) e^{-\tau_{i+1,N}}
 \end{equation}
 
 \input{./rtm/rtm-parameters}
